--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.yelp.codegen.plugin'
+    id 'com.google.gms.google-services'
 }
 
 
@@ -87,6 +88,9 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
+
+    implementation platform('com.google.firebase:firebase-bom:26.6.0')
+    implementation 'com.google.firebase:firebase-analytics'
 
     implementation "com.google.dagger:hilt-android:2.30.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
