--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.30.1-alpha'
+        classpath 'com.google.gms:google-services:4.3.5'
         classpath "com.yelp.codegen:plugin:1.4.1"
 
         // NOTE: Do not place your application dependencies here; they belong
