--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.30.1-alpha'
         classpath 'com.google.gms:google-services:4.3.5'
         classpath "com.yelp.codegen:plugin:1.4.1"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
