--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,21 @@
 version: 2.1
-jobs:
-  build:
+executors:
+  main-executor:
     working_directory: ~/code
     docker:
       - image: circleci/android:api-30
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    environment:
-      JVM_OPTS: -Xmx3200m
+      environment:
+        JVM_OPTS: -Xmx3200m
+jobs:
+  build:
+    executor: main-executor
     steps:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-#      - run:
-#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
-#         command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
@@ -23,12 +23,21 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: app/build/reports
-          destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+  test:
+    executor: main-executor
+    steps:
+      -run:
+        name: Run Tests
+        command: ./gradlew lint test
+      -store_artifacts:
+        path: app/build/reports
+        destination: reports
+      -store_test_results:
+        path: app/build/test-results
+workflows:
+  version: 2
+  main_flow:
+    jobs:
+      - build
+      - test
+
