--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,15 @@ jobs:
     executor: main-executor
     steps:
       - checkout
+      - restore_cache:
+         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - persist_to_workspace:
           root: .
           paths:
@@ -22,6 +28,8 @@ jobs:
   test:
     executor: main-executor
     steps:
+      - restore_cache:
+         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - attach_workspace:
          at: .
       - run:
