--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,91 @@
 version: 2.1
-executors:
-  main-executor:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-30
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+
+orbs:
+  android: circleci/android@1.0.3
+
 jobs:
-  build:
-    executor: main-executor
+  unit-test:
+    executor:
+      name: android/android-machine
+      resource-class: xlarge
     steps:
       - checkout
-      - restore_cache:
-         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - android/restore-gradle-cache
+      - android/restore-build-cache
+      - android/run-tests:
+          test-command: ./gradlew testDebug
       - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-  test:
-    executor: main-executor
-    steps:
-      - restore_cache:
-         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - attach_workspace:
-         at: .
-      - run:
-         name: Run Tests
-         command: ./gradlew lint test
-      - store_artifacts:
-         path: app/build/reports
-         destination: reports
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
       - store_test_results:
-         path: app/build/test-results
-workflows:
-  version: 2
-  main_flow:
-    jobs:
-      - build
-      - test:
-         requires:
-           - build
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit
+      - android/save-gradle-cache
+      - android/save-build-cache
+  android-test:
+    parameters: # this is a parameter
+      system-image:
+        type: string
+        default: system-images;android-30;google_apis;x86
+    executor:
+      name: android/android-machine
+      resource-class: xlarge
+    steps:
+      - checkout
+      - android/start-emulator-and-run-tests:
+          test-command: ./gradlew connectedDebugAndroidTest
+          system-image: << parameters.system-image >> # parameter being used
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/build/outputs/androidTest-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: "always"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit
+  release-build:
+    executor:
+      name: android/android-machine
+      resource-class: xlarge
+    steps:
+      - checkout
+      - android/restore-gradle-cache
+      - android/restore-build-cache
+      - run:
+          name: Assemble release build
+          command: |
+            ./gradlew assembleRelease
+      - store_artifacts:
+          path: app/build/outputs/apk/release
 
+workflows:
+  test-and-build:
+    jobs:
+      - unit-test
+      - android-test: # Commits to any branch - skip matrix of devices
+          filters:
+            branches:
+              ignore: master
+      - android-test: # Commits to master branch only - run full matrix
+          matrix:
+            alias: android-test-all
+            parameters:
+              system-image: 
+                - system-images;android-30;google_apis;x86
+          name: android-test-<<matrix.system-image>>
+          filters:
+            branches:
+              only: master
+      - release-build:
+          requires:
+            - unit-test
+            - android-test-all
+          filters:
+            branches:
+              only: master # Commits to master branch
