--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,50 +4,42 @@ orbs:
   android: circleci/android@1.0.3
 
 jobs:
-  unit-test:
-    executor:
-      name: android/android-machine
-      resource-class: xlarge
+  checkout:
+    executor: android/android-machine
     steps:
       - checkout
-      - android/restore-gradle-cache
-      - android/restore-build-cache
-      - android/run-tests:
-          test-command: ./gradlew testDebug
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - "project"
+  lint:
+    executor: android/android-machine
+    steps:
+      - attach_workspace:
+          at: ~/
       - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
-          when: always
+         name: lint
+         command: ./gradlew lint
       - store_test_results:
-          path: ~/test-results
-      - store_artifacts:
-          path: ~/test-results/junit
-      - android/save-gradle-cache
-      - android/save-build-cache
-  release-build:
-    executor:
-      name: android/android-machine
-      resource-class: xlarge
+         path: app/build/reports/lint-results.xml
+  unit_tests:
+    executor: android/android-machine
     steps:
-      - checkout
-      - android/restore-gradle-cache
-      - android/restore-build-cache
+      - attach_workspace:
+          at: ~/
+      - android/run-tests:
+         test-command: ./gradlew testDebug
       - run:
-          name: Assemble release build
-          command: |
-            ./gradlew assembleRelease
-      - store_artifacts:
-          path: app/build/outputs/apk/release
+         name: unit tests
+         command: ./gradlew test
 
 workflows:
   test-and-build:
     jobs:
-      - unit-test
-      - release-build:
-          requires:
-            - unit-test
-          filters:
-            branches:
-              only: master # Commits to master branch
+      - checkout
+      - lint:
+         requires:
+           - checkout
+      - unit_tests:
+         requires:
+           - checkout
